# HeyMed

./: .env.example  .gitignore  .mcp.json  Makefile  docker-compose.yml
.claude/: settings.json
.claude/agents/: pharmacy-analyst.md  pharmacy-demo.md  pharmacy-qa.md
.claude/skills/: heymed-scenario.md  heymed-status.md  heymed-test.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5422228f533c_add_patients_medications_allergies_.py  9f57ba746e2b_add_chat_sessions_and_messages_tables.py  e2c554d781c5_add_ndc_products_and_ndc_packages_tables.py  ff6edb4e030c_initial_schema_users_and_rxnorm_tables.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/auth/: models.py  router.py  schemas.py  service.py
backend/app/chat/: models.py  router.py  service.py
backend/app/customers/: models.py
backend/app/drugs/: dailymed_api.py  models.py  ndc_models.py  ndc_router.py  openfda_api.py  router.py  rxnorm_api.py  schemas.py  service.py
backend/app/interactions/: router.py  schemas.py
backend/app/static/: index.html
backend/scripts/: scrape_thai_fda.py  scrape_thai_fda_all.py  scrape_thai_fda_full.py  seed_ndc.py  seed_rxnorm.py  seed_thai_fda.py
frontend/: pubspec.yaml
frontend/lib/: app.dart  main.dart
frontend/lib/core/api/: api_client.dart  api_endpoints.dart
frontend/lib/core/auth/: auth_provider.dart  auth_state.dart
mcp-server/: pyproject.toml
mcp-server/heymed_mcp/: cache.py  db.py  dosing_data.py  external_apis.py  server.py  thai_drug_names.py  triage_data.py
(+12 files in other folders)
